--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,4 +2,12 @@
 <div class = "container">
 	<%= @song.name %>
 	<%= @song.artist %>
+	<div class = "song_description">
+		<%= @song.description %>
+	</div>
+
+
+	<div class = "song_video">
+		<iframe width="700" height="410" src="https://www.youtube.com/embed/<%= @song.video_id %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
 </div>
