--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <div class="flash-field">
+    </div>
+
+    <%= render 'share/header' %>
+
     <%= yield %>
+
   </body>
 </html>
