--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+    @import "bootstrap-sprockets";
+    @import "bootstrap";
+
+.flash-field {
+	padding-bottom: 61px;
+	background-color: black;
+	height: 1px;
+}
