--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,82 @@
 	height: 1px;
 }
 
+dl.searchbox{
+  width: 350px;
+  position:relative;
+  background-color:#f3f3f3;
+  border:1px solid 	#FFFFF0;
+  border-radius:6px;
+  top:10px;
+  left:230px;
+}
+dl.searchbox dt{
+  padding:2px;
+}
+dl.searchbox dt input{
+  width:70%;
+  height:35px;
+  line-height:35px;
+  background:#f3f3f3;
+  border:none;
+}
+dl.searchbox dd{
+  position:absolute;
+  top:0px;
+  right:0px;
+  width:30%;
+}
+.search-btn{
+  display:block;
+  background:#CC0000;
+  width:100%;
+  height:100%;
+  line-height:37px;
+  border:none;
+  border-radius: 0 6px 6px 0;
+  color:#FFF;
+}
+.search-btn:hover {
+  background:#b22222;
+}
+ .list1 {
+	flex-grow:4;
+}
+ .list2 {
+ 	flex-grow:4;
+ 	left: 100px;
+}
+ .list3 {
+ 	flex-grow:0.5;
+	font-size: 15px;
+	margin-top: 20px;
+	color: #fff;
+}
+.block{
+	display: flex;
+	font-style: italic
+}
+.navbar {
+  font-weight: 700;
+  font-size: .9rem;
+  letter-spacing: .3rem;
+  background: rgba(0, 0, 0, 0.6)!important;
+}
+
+.pucture_field{
+	margin-bottom:15px;
+}
+
+.name_space{
+	margin-top:15px;
+	font-size:18px;
+}
+
+.description_field{
+	font-size:15px;
+	text-overflow:ellipsis;
+	overflow:hidden;
+	display:webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+}
