--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the favorites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.favorite_box{
+	margin-bottom:10px;
+}
+
+.infinite-list{
+	max-height:300px;
+	max-width:450px;
+	overflow: scroll;
+}
