--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,15 +1,24 @@
-<%= form_tag(new_song_path, method: :get) do %>
-
-<%= text_field_tag :search %>
-
-<%= submit_tag '検索', name: nil %>
-
-<% end %>
-
-<% if @data != nil %>
-	<% @data.items.each do |item| %>
-
-	<iframe width="700" height="410" src="https://www.youtube.com/embed/<%= item.id.video_id %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<div class = "container">
+	<%= form_tag(new_song_path, method: :get) do %>
+		<%= text_field_tag :search %>
+		<%= submit_tag '検索', name: nil %>
 	<% end %>
-<% end %>
+	<%= form_for(@song, url: songs_path, html:{method: "post" }) do |f| %>
+		<% if @data != nil %>
+			<% @data.items.each do |item| %>
+			 	<div class = "song-name">
+					<%= item.snippet.title %>
+					<%= f.hidden_field :name, :value => item.snippet.title %>
+				</div>
+				<iframe width="700" height="410" src="https://www.youtube.com/	embed/<%= item.id.video_id %>" frameborder="0" allow="	accelerometer; autoplay; encrypted-media; gyroscope; 	picture-in-picture" allowfullscreen></iframe>
+				<%= f.hidden_field :vid, :value => item.id.video_id %>
+				<%= f.hidden_field :image, :value => item.snippet.thumbnails.medium.url %>
+			<% end %>
+			<div class = "input-field">
+				<%= f.text_field :artist %>
+				<%= f.text_area :description %>
+				<%= f.submit "確定", class: 'btn btn-danger btn-md center-block' %>
+			</div>
+		<% end %>
+	<% end %>
+</div>
