--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,4 +1,34 @@
 <div class = "container">
+	<% @all_ranks.each.with_index(1) do |favorite, i| %>
+        <div class="row">
+        	<div class="col-md-4">
+            	<p class="ranks"><%= "#{i}位" %></p>
+            	<div class="card">
+            		<%= link_to song_path(favorite.id) do %>
+              			<%= image_tag favorite.image.to_s, size: '200x120' %>
+              			<div class="card-body">
+                			<h4 class="card-title"><%= favorite.name %></h4>
+              			</div>
+              		<% end %>
+            	</div>
+          	</div>
+          </div>
+    <% end %>
+    <% @view_ranks.each.with_index(1) do |view, i| %>
+    <div class="row">
+        	<div class="col-md-4">
+            	<p class="ranks"><%= "#{i}位" %></p>
+            	<div class="card">
+            		<%= link_to song_path(view.id) do %>
+              			<%= image_tag view.image.to_s, size: '200x120' %>
+              			<div class="card-body">
+                			<h4 class="card-title"><%= view.name %></h4>
+              			</div>
+              		<% end %>
+            	</div>
+          	</div>
+          </div>
+    <% end %>
 	<h1>曲一覧</h1>
 	<% @songs.each do |song| %>
     	<%= link_to song_path(song.id) do %>
