--- a/app/views/songs/search_results.html.erb
+++ b/app/views/songs/search_results.html.erb
@@ -4,8 +4,8 @@
       <p><%= "#{params[:q][:name_or_artist_cont ]}  に一致する検索結果は見つかりませんでした" %></p>
       <p><%= "検索のヒント:" %></p>
       <ul>
-        <li><%= キーワードに誤字・脱字がないか確認します。%></li>
-        <li><%= 別のキーワードを試してみます。%></li>
+        <li> キーワードに誤字・脱字がないか確認します。</li>
+        <li> 別のキーワードを試してみます。</li>
       </ul>
     <% else %>
       <div class="sort-area">
