--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,13 +1,16 @@
 <div class = "container">
+	<h1>楽曲投稿</h1>
 	<%= form_tag(new_song_path, method: :get) do %>
-		<%= text_field_tag :search %>
-		<%= submit_tag '検索', name: nil %>
+		<div class = "locate_song">
+			<%= text_field_tag :search %>
+			<%= submit_tag '検索', name: nil %>
+		</div>
 	<% end %>
 	<%= form_for(@song, url: songs_path, html:{method: "post" }) do |f| %>
 		<% if @data != nil %>
 			<% @data.items.each do |item| %>
 			 	<div class = "song-name">
-					<%= item.snippet.title %>
+					<strong><%= item.snippet.title %></strong>
 					<%= f.hidden_field :name, :value => item.snippet.title %>
 				</div>
 				<iframe width="700" height="410" src="https://www.youtube.com/	embed/<%= item.id.video_id %>" frameborder="0" allow="	accelerometer; autoplay; encrypted-media; gyroscope; 	picture-in-picture" allowfullscreen></iframe>
@@ -15,9 +18,19 @@
 				<%= f.hidden_field :image, :value => item.snippet.thumbnails.medium.url %>
 			<% end %>
 			<div class = "input-field">
-				<%= f.text_field :artist %>
-				<%= f.text_area :description %>
-				<%= f.submit "確定", class: 'btn btn-danger btn-md center-block' %>
+				<ul>
+					<li class = "profile_field">
+						<%= f.label :artist %>
+						<%= f.text_field :artist %>
+					</li>
+					<li class = "profile_field">
+						<%= f.label :description %>
+						<%= f.text_area :description %>
+					</li>
+					<li class = "profile_submit">
+						<%= f.submit "確定", class: 'btn btn-danger 	btn-md center-block' %>
+					</li>
+				</ul>
 			</div>
 		<% end %>
 	<% end %>
