--- a/app/views/users/followed.html.erb
+++ b/app/views/users/followed.html.erb
@@ -1,5 +1,8 @@
-<% @follows.each do |followed| %>
-
-<%= link_to followed.user.name, user_path(followed.user.id) %>
-
-<% end %>
+<div class = "container">
+	<h1>フォロワー一覧</h1>
+	<% @follows.each do |followed| %>
+		<%= image_tag attachment_url(followed, :profile_image, :fill,90, 80, format: "jpg") %>
+		<strong><%= link_to followed.name, user_path(followed.id) %></strong>
+		<%= followed.introduction %>
+	<% end %>
+</div>
